--- a/app/src/main/res/layout/activity_completed_orders.xml
+++ b/app/src/main/res/layout/activity_completed_orders.xml
@@ -6,18 +6,81 @@
     android:layout_height="match_parent"
     tools:context=".CompletedOrders">
 
-    <TextView
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbarComOrders"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:text="Your orders will be here!"
-        android:gravity="center"
-        android:textColor="@color/textColor"
-        android:textSize="16dp"
-        android:background="@color/textBackColor"
-        app:layout_constraintVertical_bias="0.010"
+        android:layout_height="wrap_content"
+        app:title="Your Orders"
+        android:background="@color/myColor"
+        app:titleTextColor="@android:color/white"
+        app:layout_constraintVertical_bias="0.0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/layout"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:background="#C9EBFF"
+        app:layout_constraintVertical_bias="0.00"
+        app:layout_constraintHorizontal_bias="0.020"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbarComOrders">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Your earnings"
+            android:layout_marginStart="10dp"
+            android:gravity="start"
+            android:fontFamily="@font/uber_move_bold"
+            android:textColor="#007BC3"
+            android:textSize="16dp" />
+
+        <TextView
+            android:id="@+id/tvEarnings"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="PKR 0.0"
+            android:gravity="end"
+            android:fontFamily="@font/uber_move_bold"
+            android:layout_marginEnd="10dp"
+            android:textColor="#007BC3"
+            android:textSize="16dp" />
+
+    </LinearLayout>
+
+    <View
+        android:id="@+id/view"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@color/myColor"
+        app:layout_constraintTop_toBottomOf="@+id/layout"/>
+
+    <jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout
+        android:id="@+id/layoutComOrder"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:padding="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvComOrders"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
