--- a/app/src/main/res/layout/edittext_for_restaurant_name.xml
+++ b/app/src/main/res/layout/edittext_for_restaurant_name.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:padding="10dp"
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content">
 
         <EditText
-            android:id="@+id/editTextres"
+            android:id="@+id/etResName"
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:hint="Restaurant name"
@@ -18,4 +18,23 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/etResName"
+            android:text="Select Category"
+            android:textStyle="bold"
+            android:textSize="14sp"/>
+
+        <org.angmarch.views.NiceSpinner
+            android:id="@+id/spResCat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv"
+            android:backgroundTint="@color/white"
+            app:arrowTint="@color/black"
+            app:textTint="@color/black"
+            android:maxLines="1" />
+
+</RelativeLayout>
