--- a/app/src/main/res/layout/layout_confirm_rider.xml
+++ b/app/src/main/res/layout/layout_confirm_rider.xml
@@ -60,6 +60,7 @@
                 android:layout_height="wrap_content"
                 android:background="@color/myColor"
                 android:text="Confirm Rider"
+                android:elevation="15dp"
                 android:textColor="@android:color/white"/>
 
         </LinearLayout>
