--- a/app/src/main/res/layout/layout_driver_info.xml
+++ b/app/src/main/res/layout/layout_driver_info.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/driverInfoLayout"
     android:visibility="gone"
     android:layout_width="match_parent"
@@ -29,16 +29,19 @@
                 android:layout_height="wrap_content">
 
                 <ImageView
-                    android:layout_width="80dp"
-                    android:layout_height="70dp"
+                    android:layout_width="85dp"
+                    android:layout_height="75dp"
                     android:layout_marginStart="50dp"
                     android:layout_gravity="center_vertical"
                     android:src="@drawable/bike_front"/>
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/ivDriver"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
+                    android:layout_width="85dp"
+                    android:layout_height="85dp"
+                    app:civ_circle_background_color="@color/white"
+                    app:civ_border_color="@color/white_greyish"
+                    app:civ_border_width="5dp"
                     android:src="@drawable/account_circle"/>
 
             </FrameLayout>
