--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,8 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#ff0000</color>
     <color name="myColor">#0084d1</color>
     <color name="myColorSecond">#37B4FD</color>
+
 
     <color name="background_color">#009688</color>
     <color name="white_greyish">#EEEEEE</color>
