--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -4,103 +4,151 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddItem"
-    android:background="@drawable/background">
+    tools:context=".AddItem">
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:orientation="vertical"
-        android:padding="20dp"
-        android:layout_marginTop="70dp"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/myColor"
+        app:titleTextColor="@android:color/white"
+        app:layout_constraintVertical_bias="0.0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/uber_move_bold"
+        android:padding="15dp"
+        android:text="Add new product:"
+        android:textColor="@color/black"
+        android:textSize="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:padding="30dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <EditText
             android:id="@+id/etItemName"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:background="@android:color/transparent"
+            android:background="@drawable/orders_item_shape"
+            android:textCursorDrawable="@drawable/cursor_color"
+            android:layout_marginBottom="5dp"
             android:drawablePadding="8dp"
             android:gravity="center_vertical"
             android:hint="@string/itemname"
             android:inputType="text"
             android:padding="10dp"
             android:singleLine="true"
-            android:textColor="@color/white"
-            android:textColorHint="@color/white"
             android:textSize="16sp" />
 
         <View
             android:layout_width="fill_parent"
             android:layout_height="1px"
-            android:background="@color/white_greyish" />
+            android:background="@color/myColor" />
 
         <EditText
             android:id="@+id/etItemPrice"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:background="@android:color/transparent"
+            android:background="@drawable/orders_item_shape"
+            android:textCursorDrawable="@drawable/cursor_color"
+            android:layout_marginBottom="5dp"
             android:drawablePadding="8dp"
             android:gravity="center_vertical"
             android:hint="@string/price"
             android:inputType="text"
             android:padding="10dp"
             android:singleLine="true"
-            android:textColor="@color/white"
-            android:textColorHint="@color/white"
             android:textSize="16sp" />
 
         <View
             android:layout_width="fill_parent"
             android:layout_height="1px"
-            android:background="@color/white_greyish" />
+            android:background="@color/myColor" />
 
-        <EditText
-            android:id="@+id/etScedule"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:background="@android:color/transparent"
-            android:drawablePadding="8dp"
-            android:gravity="center_vertical"
-            android:hint="@string/scedule"
-            android:inputType="text"
-            android:padding="10dp"
-            android:singleLine="true"
-            android:textColor="@color/white"
-            android:textColorHint="@color/white"
-            android:textSize="16sp" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/tvFrom"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="5dp"
+                android:layout_marginStart="30dp"
+                android:backgroundTint="@color/myColor"
+                android:background="@drawable/orders_item_shape"
+                android:textCursorDrawable="@drawable/cursor_color"
+                android:layout_marginBottom="5dp"
+                android:gravity="center"
+                android:text="@string/From"
+                android:textColor="@color/white"
+                android:padding="10dp"
+                android:singleLine="true"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/tvTo"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="30dp"
+                android:layout_marginTop="5dp"
+                android:backgroundTint="@color/myColor"
+                android:background="@drawable/orders_item_shape"
+                android:textCursorDrawable="@drawable/cursor_color"
+                android:layout_marginBottom="5dp"
+                android:drawablePadding="8dp"
+                android:gravity="center"
+                android:text="@string/To"
+                android:textColor="@color/white"
+                android:padding="10dp"
+                android:singleLine="true"
+                android:textSize="16sp" />
+
+        </RelativeLayout>
 
         <View
             android:layout_width="fill_parent"
             android:layout_height="1px"
-            android:background="@color/white_greyish" />
+            android:background="@color/myColor" />
 
         <EditText
             android:id="@+id/etAvailable"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:background="@android:color/transparent"
+            android:background="@drawable/orders_item_shape"
+            android:textCursorDrawable="@drawable/cursor_color"
+            android:layout_marginBottom="5dp"
             android:drawablePadding="8dp"
             android:gravity="center_vertical"
             android:hint="@string/available"
             android:inputType="text"
             android:padding="10dp"
             android:singleLine="true"
-            android:textColor="@color/white"
-            android:textColorHint="@color/white"
             android:textSize="16sp" />
 
         <View
             android:layout_width="fill_parent"
             android:layout_height="1px"
-            android:background="@color/white_greyish" />
+            android:background="@color/myColor" />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -118,27 +166,33 @@
                 android:layout_alignParentStart="true"
                 android:layout_centerInParent="true" />
 
-            <Button
-                android:id="@+id/btnPickImage"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_toEndOf="@+id/etItemImage"
                 android:gravity="center"
-                android:text="Pick Image"
-                android:layout_alignParentEnd="true"
-                android:layout_centerInParent="true"
-                android:layout_marginEnd="15dp"
-                style="@style/Widget.MaterialComponents.Button"/>
+                android:layout_centerInParent="true">
+
+                <Button
+                    android:id="@+id/btnPickImage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="Pick Image"
+                    android:textColor="@color/white"
+                    style="@style/Widget.MaterialComponents.Button"/>
+
+            </LinearLayout>
 
         </RelativeLayout>
 
         <View
             android:layout_width="fill_parent"
             android:layout_height="1px"
-            android:background="@color/white_greyish" />
+            android:background="@color/myColor" />
 
         <Button
             android:id="@+id/btnDone"
-            style="@style/Widget.MaterialComponents.Button"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
