--- a/app/src/main/res/layout/edittext_for_restaurant_name.xml
+++ b/app/src/main/res/layout/edittext_for_restaurant_name.xml
@@ -6,7 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardBackgroundColor="@color/white"
-    app:cardElevation="10dp"
     app:cardCornerRadius="20dp">
 
         <RelativeLayout
@@ -33,9 +32,9 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tvPlace"
                     android:textColor="@color/black"
-                    android:text="What would you like to called your restaurant.\nPlease write below:"
-                    android:textSize="16sp"
-                    android:fontFamily="@font/uber_move"
+                    android:text="What would you like to called your restaurant. Please write below:"
+                    android:textSize="14sp"
+                    android:fontFamily="@font/poppins_medium"
                     android:paddingTop="5dp"
                     android:paddingStart="10dp"
                     android:paddingEnd="10dp"/>
@@ -66,6 +65,7 @@
                     android:layout_below="@+id/layout"
                     android:text="Select Category"
                     android:textColor="@color/black"
+                    android:fontFamily="@font/uber_move_bold"
                     android:textStyle="bold"
                     android:padding="10dp"
                     android:textSize="16sp"/>
@@ -75,31 +75,73 @@
                     android:layout_width="200dp"
                     android:layout_height="50dp"
                     android:layout_below="@+id/tv"
-                    android:layout_centerHorizontal="true"
-                     />
+                    android:layout_centerHorizontal="true" />
+
+                <RelativeLayout
+                    android:id="@+id/layout2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/spResCat"
+                    android:paddingStart="10dp"
+                    android:paddingEnd="10dp">
+
+                        <ImageView
+                            android:id="@+id/ivResImage"
+                            android:layout_width="150dp"
+                            android:layout_height="100dp"
+                            android:scaleType="fitXY"
+                            android:background="@android:color/transparent"
+                            android:padding="5dp"
+                            android:src="@drawable/food_placeholder"
+                            android:layout_alignParentStart="true"
+                            android:layout_centerInParent="true" />
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_toEndOf="@+id/ivResImage"
+                            android:gravity="center"
+                            android:layout_centerInParent="true">
+
+                                <Button
+                                    android:id="@+id/btnPickImage"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center"
+                                    android:text="Pick Image"
+                                    android:textSize="14dp"
+                                    android:fontFamily="@font/uber_move_bold"
+                                    android:textColor="@color/myColor"
+                                    android:background="@color/fui_transparent" />
+
+                        </LinearLayout>
+
+                </RelativeLayout>
 
                 <Button
                     android:id="@+id/btnDone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/spResCat"
+                    android:layout_below="@+id/layout2"
                     android:layout_alignParentEnd="true"
                     android:background="@color/fui_transparent"
                     android:text="Done"
+                    android:fontFamily="@font/uber_move_bold"
                     android:textColor="@color/myColor"
-                    android:textSize="14sp"/>
+                    android:textSize="14sp" />
 
                 <Button
                     android:id="@+id/btnCancel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/spResCat"
+                    android:layout_below="@+id/layout2"
                     android:layout_toStartOf="@+id/btnDone"
+                    android:fontFamily="@font/uber_move_bold"
                     android:background="@color/fui_transparent"
                     android:text="Cancel"
                     android:textColor="@color/myColor"
                     android:textSize="14sp" />
 
-                </RelativeLayout>
+        </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
