--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -26,7 +26,7 @@
         android:padding="10dp"
         android:text="Add new product:"
         android:textColor="@color/black"
-        android:textSize="20dp"
+        android:textSize="20sp"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
     <LinearLayout
