--- a/app/src/main/res/layout/main_activity_adapter_layout.xml
+++ b/app/src/main/res/layout/main_activity_adapter_layout.xml
@@ -1,41 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="?attr/selectableItemBackgroundBorderless">
+    android:background="?attr/selectableItemBackgroundBorderless"
+    android:foreground="?attr/selectableItemBackgroundBorderless"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@android:color/white">
+        android:background="@android:color/white"
+        android:orientation="vertical">
 
-        <androidx.cardview.widget.CardView
+        <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/white"
             android:orientation="vertical"
             app:cardCornerRadius="10dp"
-            app:cardElevation="12dp"
-            app:cardUseCompatPadding="true">
+            app:cardElevation="20dp"
+            android:layout_margin="20dp"
+            app:strokeColor="@color/myColor"
+            app:strokeWidth="1dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:background="@color/myColor">
+                android:background="@color/myColor"
+                android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/ivItem"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
+                    android:layout_height="150dp"
                     android:adjustViewBounds="true"
                     android:scaleType="fitXY"
-                    android:src="@drawable/food_placeholder"
-                    android:focusable="true"/>
+                    android:src="@drawable/food_placeholder" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -51,14 +52,14 @@
                             android:id="@+id/tvItem"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginStart="10dp"
                             android:layout_gravity="left|center_vertical"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginTop="5dp"
+                            android:fontFamily="@font/uber_move_bold"
                             android:text="Restaurant item name"
                             android:textAllCaps="true"
                             android:textColor="@android:color/white"
-                            android:textSize="12sp"
-                            android:fontFamily="@font/poppins_medium"/>
+                            android:textSize="12sp" />
 
                     </LinearLayout>
 
@@ -72,26 +73,26 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="10dp"
                             android:layout_marginBottom="5dp"
+                            android:fontFamily="@font/uber_move_bold"
                             android:gravity="start"
                             android:text="PKR300"
                             android:textAllCaps="true"
                             android:textColor="@android:color/white"
-                            android:textSize="12sp"
-                            android:fontFamily="@font/poppins_medium"/>
+                            android:textSize="12sp" />
 
                         <TextView
                             android:id="@+id/tvItemSchedule"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_gravity="bottom"
                             android:layout_marginEnd="10dp"
                             android:layout_marginBottom="2.5dp"
+                            android:fontFamily="@font/uber_move_bold"
                             android:gravity="end"
-                            android:layout_gravity="bottom"
                             android:text="Available from: 9am to 2pm"
                             android:textAllCaps="true"
                             android:textColor="@android:color/white"
-                            android:textSize="12sp"
-                            android:fontFamily="@font/poppins_medium"/>
+                            android:textSize="12sp" />
 
                     </LinearLayout>
 
@@ -99,7 +100,7 @@
 
             </LinearLayout>
 
-        </androidx.cardview.widget.CardView>
+        </com.google.android.material.card.MaterialCardView>
 
     </LinearLayout>
 
