--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -81,26 +81,52 @@
             android:layout_height="1px"
             android:background="@color/myColor" />
 
-        <EditText
-            android:id="@+id/etAvailable"
-            android:layout_width="fill_parent"
+        <RelativeLayout
+            android:id="@+id/layout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:background="@drawable/orders_item_shape"
-            android:textCursorDrawable="@drawable/cursor_color"
-            android:layout_marginBottom="5dp"
-            android:drawablePadding="8dp"
-            android:gravity="center_vertical"
-            android:hint="@string/available"
-            android:inputType="text"
-            android:padding="10dp"
-            android:singleLine="true"
-            android:textSize="16sp" />
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            android:background="@drawable/orders_item_shape">
+
+            <TextView
+                android:id="@+id/tvAvailable"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="10dp"
+                android:visibility="gone"
+                android:text="Yes"
+                android:textStyle="bold"
+                android:textColor="@color/myColor"
+                android:textSize="16sp"/>
+
+            <TextView
+                android:id="@+id/tvNotAvailable"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="10dp"
+                android:visibility="visible"
+                android:text="No"
+                android:textStyle="bold"
+                android:textColor="@color/myColor"
+                android:textSize="16sp"/>
+
+            <com.google.android.material.switchmaterial.SwitchMaterial
+                android:id="@+id/switchAvailable"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="10dp"/>
+
+        </RelativeLayout>
 
         <View
             android:layout_width="fill_parent"
             android:layout_height="1px"
-            android:background="@color/myColor" />
+            android:background="@color/myColor"
+            android:layout_marginTop="5dp" />
 
         <TextView
             android:id="@+id/tvScedule"
@@ -111,7 +137,7 @@
             android:text="Schedule:"
             android:fontFamily="@font/uber_move_bold"
             android:padding="5dp"
-            android:textColor="@color/black"
+            android:textColor="@color/myColor"
             android:singleLine="true"
             android:textSize="16sp" />
 
