--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -126,6 +126,19 @@
             android:background="@color/myColor"
             android:layout_marginTop="5dp" />
 
+        <Spinner
+            android:id="@+id/spCategories"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/orders_item_shape"/>
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1px"
+            android:background="@color/myColor"
+            android:layout_marginTop="5dp" />
+
         <TextView
             android:id="@+id/tvScedule"
             android:layout_width="wrap_content"
