--- a/app/src/main/res/layout/activity_orders.xml
+++ b/app/src/main/res/layout/activity_orders.xml
@@ -13,7 +13,8 @@
         app:title="Your Orders"
         android:background="@color/myColor"
         app:titleTextColor="@android:color/white"
-        app:layout_constraintVertical_bias="0.0"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+    app:layout_constraintVertical_bias="0.0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
