--- a/app/src/main/res/layout/activity_completed_orders.xml
+++ b/app/src/main/res/layout/activity_completed_orders.xml
@@ -12,7 +12,8 @@
         android:layout_height="wrap_content"
         app:title="Your Orders"
         android:background="@color/myColor"
-        app:titleTextColor="@android:color/white"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+    app:titleTextColor="@android:color/white"
         app:layout_constraintVertical_bias="0.0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
