--- a/app/src/main/res/layout/activity_item_properties.xml
+++ b/app/src/main/res/layout/activity_item_properties.xml
@@ -12,7 +12,8 @@
         android:layout_height="wrap_content"
         android:background="@color/myColor"
         app:titleTextColor="@android:color/white"
-        app:layout_constraintVertical_bias="0.0"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+    app:layout_constraintVertical_bias="0.0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,21 +40,29 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-        <EditText
-            android:id="@+id/etItemPrice"
-            android:layout_width="fill_parent"
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:background="@drawable/orders_item_shape"
-            android:textCursorDrawable="@drawable/cursor_color"
-            android:layout_marginBottom="5dp"
-            android:drawablePadding="8dp"
-            android:gravity="center_vertical"
-            android:hint="@string/price"
-            android:inputType="number"
-            android:padding="10dp"
-            android:singleLine="true"
-            android:textSize="16sp" />
+            app:boxStrokeColor="@color/myColor"
+            app:boxCornerRadiusBottomEnd="10dp"
+            app:boxCornerRadiusBottomStart="10dp"
+            app:boxCornerRadiusTopEnd="10dp"
+            app:boxCornerRadiusTopStart="10dp">
+
+            <EditText
+                android:id="@+id/etItemPrice"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:hint="@string/price"
+                android:inputType="number"
+                android:padding="10dp"
+                android:singleLine="true"
+                android:textSize="16sp" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         <View
             android:layout_width="fill_parent"
@@ -65,37 +74,50 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar"
-            android:background="@drawable/orders_item_shape">
+            android:background="@drawable/orders_item_shape"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar">
+
+            <TextView
+                android:id="@+id/tvAvailablePlace"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="10dp"
+                android:text="Available: "
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/tvAvailable"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
+                android:layout_toEndOf="@+id/tvAvailablePlace"
                 android:layout_marginStart="10dp"
-                android:visibility="gone"
                 android:text="Yes"
-                android:textColor="@color/myColor"
-                android:textSize="16sp"/>
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/tvNotAvailable"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
+                android:layout_toEndOf="@+id/tvAvailablePlace"
                 android:layout_marginStart="10dp"
-                android:visibility="visible"
                 android:text="No"
-                android:textColor="@color/myColor"
-                android:textSize="16sp"/>
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:visibility="visible" />
 
             <com.google.android.material.switchmaterial.SwitchMaterial
                 android:id="@+id/switchAvailable"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:layout_alignParentEnd="true"
-                android:layout_marginEnd="10dp"/>
+                android:layout_marginEnd="10dp" />
 
         </RelativeLayout>
 
@@ -126,57 +148,50 @@
             <TextView
                 android:id="@+id/tvFrom"
                 android:layout_width="70dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_marginTop="5dp"
-                android:backgroundTint="@color/myColor"
-                android:background="@drawable/orders_item_shape"
-                android:textCursorDrawable="@drawable/cursor_color"
-                android:layout_marginBottom="5dp"
-                android:gravity="center"
-                android:text="@string/From"
-                android:textColor="@color/white"
-                android:padding="10dp"
+                android:layout_height="40dp"
                 android:layout_margin="10dp"
-                android:singleLine="true"
-                android:textSize="16sp" />
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:layout_weight="1"
+                android:backgroundTint="@color/myColor"
+                style="@style/Widget.AppCompat.Button"
+                android:background="@drawable/orders_item_shape"
+                android:foreground="@drawable/ripple"
+                android:text="@string/From"
+                android:textColor="@color/white" />
 
             <TextView
                 android:id="@+id/tvPlace"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_margin="10dp"
                 android:layout_marginTop="5dp"
-                android:backgroundTint="@color/myColor"
-                android:background="@drawable/orders_item_shape"
-                android:textCursorDrawable="@drawable/cursor_color"
                 android:layout_marginBottom="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/orders_item_shape"
+                android:backgroundTint="@color/myColor"
                 android:gravity="center"
+                android:padding="10dp"
+                android:singleLine="true"
                 android:text="@string/To"
                 android:textColor="@color/white"
-                android:padding="10dp"
-                android:layout_margin="10dp"
-                android:singleLine="true"
+                android:textCursorDrawable="@drawable/cursor_color"
                 android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/tvTo"
                 android:layout_width="70dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_marginTop="5dp"
-                android:backgroundTint="@color/myColor"
-                android:background="@drawable/orders_item_shape"
-                android:textCursorDrawable="@drawable/cursor_color"
-                android:layout_marginBottom="5dp"
-                android:drawablePadding="8dp"
-                android:gravity="center"
-                android:text="@string/From"
-                android:textColor="@color/white"
-                android:padding="10dp"
+                android:layout_height="40dp"
                 android:layout_margin="10dp"
-                android:singleLine="true"
-                android:textSize="16sp" />
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:layout_weight="1"
+                android:backgroundTint="@color/myColor"
+                style="@style/Widget.AppCompat.Button"
+                android:background="@drawable/orders_item_shape"
+                android:foreground="@drawable/ripple"
+                android:text="@string/From"
+                android:textColor="@color/white" />
 
         </LinearLayout>
 
@@ -212,6 +227,7 @@
                     android:id="@+id/btnPickImage"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:foreground="?attr/selectableItemBackground"
                     android:gravity="center"
                     android:text="Pick Image"
                     android:textColor="@color/white"
@@ -238,6 +254,7 @@
                 android:layout_height="55dp"
                 android:layout_weight="1"
                 android:layout_marginTop="40dp"
+                android:foreground="?attr/selectableItemBackground"
                 style="@style/Widget.MaterialComponents.Button"
                 android:text="@string/done"
                 android:backgroundTint="@color/myColor"
