--- a/app/src/main/res/drawable/background_messages.xml
+++ b/app/src/main/res/drawable/background_messages.xml
@@ -2,8 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners android:radius="8dp" android:topRightRadius="0dp" />
+    <corners android:radius="8dp" />
 
     <solid android:color="@color/white" />
+
+    <gradient android:startColor="@color/myColor" android:endColor="@color/myColorSecond"/>
 
 </shape>
