--- a/app/src/main/res/drawable/ripple.xml
+++ b/app/src/main/res/drawable/ripple.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- An white rectangle ripple. -->
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/textBackColor">
+    android:color="@color/myColorSecond">
 
     <item android:id="@android:id/mask">
 
         <shape android:shape="rectangle">
 
-            <solid android:color="@color/myColor" />
+            <solid android:color="@color/myColorSecond" />
 
-            <corners android:radius="50dp" />
+            <corners android:radius="0dp" />
 
         </shape>
 
