--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -11,32 +11,35 @@
         android:id="@+id/toolbarChat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="0dp"
         android:background="@color/myColor"
-        app:title="SendMessage"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:titleTextColor="@android:color/white"
-        android:layout_centerHorizontal="true"/>
+        app:title="SendMessage"
+        app:titleTextColor="@android:color/white" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+    <RelativeLayout
         android:id="@+id/layoutOrder"
-        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/layout"
         android:layout_below="@+id/toolbarChat"
-        android:layout_above="@+id/layout">
+        android:orientation="vertical">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvMessages"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-    </LinearLayout>
+    </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:orientation="horizontal"
         android:padding="7dp">
 
         <EditText
@@ -44,10 +47,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_toStartOf="@+id/ibSend"
-            android:background="@drawable/circle"
+            android:background="@drawable/msg_edittext_back"
             android:backgroundTint="@color/white"
             android:hint="Type a message..."
             android:padding="10dp"
+            android:allowUndo="true"
+            android:maxHeight="150dp"
             android:textCursorDrawable="@null" />
 
         <ImageButton
@@ -55,9 +60,9 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="5dp"
-            android:layout_marginBottom="2dp"
             android:background="@drawable/circle"
             android:foreground="@drawable/ripple"
             android:src="@drawable/send"
