--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -51,7 +51,7 @@
                         android:id="@+id/tvFirstName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Hafiz Muhammad"
+                        android:text="First Name"
                         android:textSize="24dp"
                         android:fontFamily="@font/poppins_medium"
                         android:textColor="@color/white"
@@ -61,7 +61,7 @@
                         android:id="@+id/tvLastName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Uzair"
+                        android:text="Last Name"
                         android:textSize="24dp"
                         android:fontFamily="@font/poppins_medium"
                         android:layout_marginStart="4dp"
@@ -75,7 +75,7 @@
                     android:id="@+id/tvEmailAddress"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="developer@gmail.com"
+                    android:text="Your email"
                     android:fontFamily="@font/poppins_medium"
                     android:layout_marginBottom="10dp"
                     android:textSize="16dp"
@@ -158,7 +158,7 @@
 
                 <TextView
                     android:id="@+id/tvMobile"
-                    android:text="+923012345678"
+                    android:text="Your mobile number"
                     android:fontFamily="@font/uber_move"
                     android:layout_toEndOf="@id/mobileImageView"
                     style="@style/profileDetailsMiniText" />
@@ -182,7 +182,7 @@
 
                 <TextView
                     android:id="@+id/tvEmail"
-                    android:text="developer@gmail.com"
+                    android:text="Your email"
                     android:fontFamily="@font/uber_move"
                     android:layout_toEndOf="@id/emailImageView"
                     style="@style/profileDetailsMiniText" />
@@ -207,7 +207,7 @@
 
                 <TextView
                     android:id="@+id/tvAddress"
-                    android:text="Avenue 2nd Street NW SY."
+                    android:text="Your address"
                     android:fontFamily="@font/uber_move"
                     android:layout_below="@+id/addressLabel"
                     android:layout_toEndOf="@id/addressImageView"
@@ -232,7 +232,7 @@
 
                 <TextView
                     android:id="@+id/tvDateOfBirth"
-                    android:text="12/05/1990"
+                    android:text="Your DOB"
                     android:fontFamily="@font/uber_move"
                     android:layout_toEndOf="@id/dobImageView"
                     style="@style/profileDetailsMiniText" />
