--- a/app/src/main/res/layout/main_activity_adapter_layout.xml
+++ b/app/src/main/res/layout/main_activity_adapter_layout.xml
@@ -65,7 +65,7 @@
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="wrap_content">
 
                         <TextView
                             android:id="@+id/tvItemPrice"
@@ -75,7 +75,7 @@
                             android:layout_marginBottom="5dp"
                             android:fontFamily="@font/uber_move_bold"
                             android:gravity="start"
-                            android:text="PKR300"
+                            android:text="Price"
                             android:textAllCaps="true"
                             android:textColor="@android:color/white"
                             android:textSize="12sp" />
@@ -89,7 +89,7 @@
                             android:layout_marginBottom="2.5dp"
                             android:fontFamily="@font/uber_move_bold"
                             android:gravity="end"
-                            android:text="Available from: 9am to 2pm"
+                            android:text="Availability"
                             android:textAllCaps="true"
                             android:textColor="@android:color/white"
                             android:textSize="12sp" />
