--- a/app/src/main/res/drawable/add_details_back.xml
+++ b/app/src/main/res/drawable/add_details_back.xml
@@ -3,14 +3,14 @@
 
     <solid android:color="@color/myColor"/>
 
-    <corners android:bottomLeftRadius="20dp"
-        android:bottomRightRadius="20dp"/>
+    <corners android:bottomLeftRadius="10dp"
+        android:bottomRightRadius="10dp"/>
 
-    <gradient
-        android:angle="0"
-        android:centerX="50%"
-        android:startColor="@color/myColorSecond"
-        android:endColor="@color/myColor"
-        android:type="linear" />
+<!--    <gradient-->
+<!--        android:angle="0"-->
+<!--        android:centerX="50%"-->
+<!--        android:startColor="@color/myColorSecond"-->
+<!--        android:endColor="@color/myColor"-->
+<!--        android:type="linear" />-->
 
 </shape>
