--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -57,7 +57,8 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserra_regular_bold"
             android:padding="10dp"
-            android:textColor="@color/grey_60"
+            android:textColor="@color/black"
+            android:enabled="false"
             android:textSize="15sp"
             android:text="    +92    " />
 
@@ -67,7 +68,7 @@
         android:id="@+id/phone_number2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="65dp"
+        android:layout_marginTop="70dp"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="20dp"
         android:layout_below="@+id/please"
@@ -77,23 +78,31 @@
         app:boxCornerRadiusTopEnd="10dp"
         app:boxCornerRadiusBottomStart="10dp"
         app:boxStrokeWidth="0dp"
-        android:hint="  323-333-12341"
-        android:textColorHint="@color/grey_40"
+        app:hintEnabled="false"
         app:boxBackgroundColor="@color/editTextBack"
+        app:counterMaxLength="10"
+        app:counterEnabled="true"
+        app:endIconMode="clear_text"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
         <EditText
             android:id="@+id/editTextPhone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:hint="  323-333-12341"
+            android:textColorHint="@color/grey_40"
             android:fontFamily="@font/montserra_regular_bold"
             android:padding="10dp"
+            android:maxLines="1"
+            android:maxLength="10"
+            android:singleLine="true"
+            android:inputType="phone"
             android:textSize="15sp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/buttonContinue"
+        android:id="@+id/buttonNext"
         android:layout_width="match_parent"
         android:layout_height="55dp"
         android:layout_below="@id/phone_number2"
