--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,44 +2,32 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/drawerLayout"
+    android:background="@color/activity_back"
     tools:context=".MainActivity">
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navView"
         android:layout_width="200dp"
         android:layout_height="match_parent"
-        app:itemTextAppearance="?android:attr/textAppearanceMedium"
+        android:layout_gravity="start"
         android:background="@color/myColorSecond"
         app:headerLayout="@layout/header"
-        app:menu="@menu/orders"
+        app:itemTextAppearance="?android:attr/textAppearanceMedium"
         app:itemTextColor="@android:color/white"
-        android:layout_gravity="start"/>
+        app:menu="@menu/orders" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fabChat"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginHorizontal="15dp"
-            android:layout_marginVertical="15dp"
-            app:fabSize="auto"
-            android:src="@drawable/chat"
-            app:rippleColor="@color/white"
-            android:contentDescription="Chat" />
-
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/myColor"
+            android:background="@drawable/add_details_back"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -49,8 +37,10 @@
             android:id="@+id/layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar"
-            android:background="#D7F1FF">
+            android:layout_marginTop="10dp"
+            android:padding="10dp"
+            android:background="#ebebeb"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
             <TextView
                 android:id="@+id/tvOnline"
@@ -58,11 +48,13 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="10dp"
-                android:visibility="gone"
+                android:fontFamily="@font/montserra_regular_bold"
+                android:textSize="14sp"
+                android:letterSpacing="0.05"
                 android:text="Online"
+                android:textColor="@color/black"
                 android:textStyle="bold"
-                android:textColor="@color/myColor"
-                android:textSize="17sp"/>
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/tvOffline"
@@ -70,18 +62,25 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="10dp"
-                android:visibility="visible"
+                android:fontFamily="@font/montserra_regular_bold"
                 android:text="Offline"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                android:letterSpacing="0.05"
                 android:textStyle="bold"
-                android:textColor="@color/myColor"
-                android:textSize="17sp"/>
+                android:visibility="visible" />
 
-            <com.google.android.material.switchmaterial.SwitchMaterial
+            <com.bitvale.switcher.SwitcherX
                 android:id="@+id/statusSwitch"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:layout_marginEnd="10dp"/>
+                android:layout_marginEnd="10dp"
+                app:elevation="4dp"
+                android:checked="false"
+                app:switcher_icon_color="@color/white"
+                app:switcher_off_color="@color/grey_40"
+                app:switcher_on_color="@color/myColor" />
 
         </RelativeLayout>
 
@@ -99,9 +98,23 @@
                 android:id="@+id/rvItems"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:padding="5dp"/>
+                android:background="@color/activity_back"/>
 
         </jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout>
+
+        <ImageButton
+            android:id="@+id/ibChat"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginHorizontal="15dp"
+            android:layout_marginVertical="45dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/chat_icon"
+            android:background="@android:color/transparent"
+            style="@style/Widget.AppCompat.Button"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:contentDescription="Chat" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
