--- a/app/src/main/res/layout/main_activity_adapter_layout.xml
+++ b/app/src/main/res/layout/main_activity_adapter_layout.xml
@@ -3,102 +3,94 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?attr/selectableItemBackgroundBorderless"
-    android:foreground="?attr/selectableItemBackgroundBorderless"
+    android:background="@color/activity_back"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/white"
+        android:background="@color/activity_back"
         android:orientation="vertical">
 
         <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
             android:background="@android:color/white"
             android:orientation="vertical"
-            app:cardCornerRadius="10dp"
-            app:cardElevation="8dp"
-            android:layout_margin="10dp"
-            app:strokeColor="@color/myColor"
-            app:strokeWidth="1dp">
+            app:cardCornerRadius="0dp"
+            app:cardElevation="0dp"
+            app:strokeWidth="0dp">
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/myColor"
-                android:orientation="vertical">
+                android:layout_height="wrap_content">
 
-                <ImageView
+                <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/ivItem"
-                    android:layout_width="match_parent"
-                    android:layout_height="150dp"
-                    android:adjustViewBounds="true"
-                    android:scaleType="fitXY"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:padding="10dp"
+                    android:elevation="8dp"
                     android:src="@drawable/food_placeholder" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/tvItem"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:layout_toEndOf="@+id/ivItem"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="15dp"
+                    android:fontFamily="@font/montserra_regular_bold"
+                    android:text="Restaurant item name"
+                    android:textColor="@android:color/black"
+                    android:textSize="14sp" />
 
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/tvItemPrice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toEndOf="@+id/tvItem"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginEnd="10dp"
+                    android:fontFamily="@font/montserra_regular_bold"
+                    android:gravity="end"
+                    android:text="Price"
+                    android:textColor="@android:color/black"
+                    android:textSize="12sp" />
 
-                        <TextView
-                            android:id="@+id/tvItem"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="left|center_vertical"
-                            android:layout_marginStart="10dp"
-                            android:layout_marginTop="5dp"
-                            android:fontFamily="@font/uber_move_bold"
-                            android:text="Restaurant item name"
-                            android:textAllCaps="true"
-                            android:textColor="@android:color/white"
-                            android:textSize="12sp" />
+                <TextView
+                    android:id="@+id/tvItemDescription"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tvItem"
+                    android:layout_toEndOf="@+id/ivItem"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="50dp"
+                    android:maxLines="3"
+                    android:fontFamily="@font/montserra_regular"
+                    android:text="Description Description Description Description Description Description Description Description Description Description "
+                    android:textColor="@android:color/black"
+                    android:textSize="12sp" />
 
-                    </LinearLayout>
+                <TextView
+                    android:id="@+id/tvItemSchedule"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toEndOf="@+id/ivItem"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_below="@+id/tvItemDescription"
+                    android:layout_marginEnd="10dp"
+                    android:fontFamily="@font/montserra_regular_bold"
+                    android:text="Availability"
+                    android:textColor="@color/myColor"
+                    android:textSize="12sp" />
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+            </RelativeLayout>
 
-                        <TextView
-                            android:id="@+id/tvItemPrice"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="10dp"
-                            android:layout_marginBottom="5dp"
-                            android:fontFamily="@font/uber_move_bold"
-                            android:gravity="start"
-                            android:text="Price"
-                            android:textAllCaps="true"
-                            android:textColor="@android:color/white"
-                            android:textSize="12sp" />
-
-                        <TextView
-                            android:id="@+id/tvItemSchedule"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="bottom"
-                            android:layout_marginEnd="10dp"
-                            android:layout_marginBottom="2.5dp"
-                            android:fontFamily="@font/uber_move_bold"
-                            android:gravity="end"
-                            android:text="Availability"
-                            android:textAllCaps="true"
-                            android:textColor="@android:color/white"
-                            android:textSize="12sp" />
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-            </LinearLayout>
 
         </com.google.android.material.card.MaterialCardView>
 
